@@ -1,7 +1,7 @@
 Package: graphicsutils
 Type: Package
 Title: Collection of graphics utilities
-Version: 1.2-1
+Version: 1.3-0
 Date: 2019-02-16
 Authors@R: c(person("Kevin", "Cazelles", role = c("aut", "cre"), email = "kcazelle@uoguelph.ca", comment = c(ORCID = "0000-0001-6619-9874")),
   person("Nicolas", "Casajus", role = c("aut"), comment = c(ORCID = "0000-0002-5537-5294")),
@@ -17,7 +17,6 @@ Imports:
     utils,
     jpeg (>= 0.1-8),
     png (>= 0.1-7),
-    magrittr (>= 1.5),
     Rcpp (>= 0.12.9)
 Suggests:
     knitr,
